src/integration/snapshots/rustclean__integration__screens__tools-simulators-picker-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Developer tools cleanup  │  reclaimable: 9.1 GiB
─────┌ Xcode simulators — what to clean? ─────────────────────────────────────────────────────┐─────
  Too│  ↑ 9 more                                                                              │
▶ Xco│  [ ]  safe  iPad Air 11-inch (M3) · iOS 26.0 · never used · 17.5 MiB                   │ar 40
  Xco│  [ ]  safe  iPad Air 11-inch (M3) · iOS 26.2 · never used · 17.5 MiB                   │hs (3
  And│  [ ]  safe  iPad Air 11-inch (M4) · iOS 27.0 · never used · 17.5 MiB                   │GiB),
  Go │  [ ]  safe  iPad Air 13-inch (M2) · iOS 18.2 · never used · 17.5 MiB                   │
  con│  [ ]  safe  iPad Air 13-inch (M3) · iOS 26.0 · never used · 17.5 MiB                   │t/con
  Pla│  [ ]  safe  iPad Air 13-inch (M3) · iOS 26.2 · never used · 17.5 MiB                   │
     │  [ ]  safe  iPad Air 13-inch (M4) · iOS 27.0 · never used · 17.5 MiB                   │
     │  [ ]  safe  iPad Pro 11-inch (M4) · iOS 18.2 · never used · 17.5 MiB                   │
     │  [ ]  safe  iPad Pro 11-inch (M4) · iOS 26.0 · never used · 17.5 MiB                   │
     │  [ ]  safe  iPad Pro 11-inch (M5) · iOS 26.0 · never used · 17.5 MiB                   │
     │  [ ]  safe  iPad Pro 11-inch (M5) · iOS 26.2 · never used · 17.5 MiB                   │
─────│  [ ]  safe  iPad Pro 11-inch (M5) · iOS 27.0 · never used · 17.5 MiB                   │─────
┌ Act│  [ ]  safe  iPad Pro 13-inch (M4) · iOS 18.2 · never used · 17.5 MiB                   │────┐
│ saf│  [ ]  safe  iPad Pro 13-inch (M4) · iOS 26.0 · never used · 17.5 MiB                   │    │
│    │  [ ]  safe  iPad Pro 13-inch (M5) · iOS 26.2 · never used · 17.5 MiB                   │    │
│    │  [ ]  safe  iPad Pro 13-inch (M5) · iOS 27.0 · never used · 17.5 MiB                   │    │
│ DAT│  [ ]  safe  iPad mini (A17 Pro) · iOS 18.2 · never used · 17.5 MiB                     │    │
│    │  [ ]  safe  iPad mini (A17 Pro) · iOS 26.0 · never used · 17.5 MiB                     │    │
│    │  [ ]  safe  iPad mini (A17 Pro) · iOS 26.2 · never used · 17.5 MiB                     │    │
│ DAT│  [ ]  safe  iPad mini (A17 Pro) · iOS 27.0 · never used · 17.5 MiB                     │    │
│    │  [ ]  safe  iPhone 16 Plus · iOS 18.2 · never used · 17.5 MiB                          │    │
│… 76│▶ [✓]  safe  iPhone 16e · iOS 26.2 · never used · 17.5 MiB                              │    │
│Dele│  ↓ 10 more                                                                             │ for│
│a ye│ Space: select   Enter: continue   Esc: cancel                                          │    │
└────└────────────────────────────────────────────────────────────────────────────────────────┘────┘
Measuring only reads. No command runs without your confirmation.
 ?  help   Esc  cancel
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 5+1 Cyan/- | 6+35 White/- BOLD | 41+54 Cyan/-
 2: 0+5 -/- BOLD | UNDERLINED | 5+1 Cyan/- | 6+10 Gray/- | 94+1 Cyan/- | 95+5 -/- BOLD | UNDERLINED
 3: 0+5 White/Indexed(238) BOLD | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/- | 95+5 White/Indexed(238) BOLD
 4: 2+3 White/- BOLD | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
 5: 2+3 White/- BOLD | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
 6: 2+3 Gray/- | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
 7: 2+3 White/- BOLD | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
 8: 2+3 White/- BOLD | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
 9: 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
10: 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
11: 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
12: 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
13: 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
14: 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/-
15: 0+1 DarkGray/- | 1+4 White/- BOLD | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/- | 95+5 DarkGray/-
16: 0+1 DarkGray/- | 1+4 Black/Green | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/- | 99+1 DarkGray/-
17: 0+1 DarkGray/- | 1+4 Gray/- | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/- | 99+1 DarkGray/-
18: 0+1 DarkGray/- | 1+4 Gray/- | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+57 White/- | 94+1 Cyan/- | 99+1 DarkGray/-
19: 0+1 DarkGray/- | 1+4 White/Red BOLD | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+55 White/- | 94+1 Cyan/- | 99+1 DarkGray/-
20: 0+1 DarkGray/- | 1+4 Gray/- | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+55 White/- | 94+1 Cyan/- | 99+1 DarkGray/-
21: 0+1 DarkGray/- | 1+4 Gray/- | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+55 White/- | 94+1 Cyan/- | 99+1 DarkGray/-
22: 0+1 DarkGray/- | 1+4 White/Red BOLD | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+55 White/- | 94+1 Cyan/- | 99+1 DarkGray/-
23: 0+1 DarkGray/- | 1+4 Gray/- | 5+1 Cyan/- | 8+4 -/- BOLD | 12+6 Black/Green | 18+50 White/- | 94+1 Cyan/- | 99+1 DarkGray/-
24: 0+1 DarkGray/- | 1+4 Gray/- | 5+1 Cyan/- | 6+6 White/Indexed(238) BOLD | 12+6 Black/Green BOLD | 18+46 White/Indexed(238) BOLD | 94+1 Cyan/- | 99+1 DarkGray/-
25: 0+1 DarkGray/- | 1+4 Gray/- | 5+1 Cyan/- | 6+11 Gray/- | 94+1 Cyan/- | 95+4 Gray/- | 99+1 DarkGray/-
26: 0+1 DarkGray/- | 1+4 Gray/- | 5+1 Cyan/- | 6+46 Gray/- | 94+1 Cyan/- | 99+1 DarkGray/-
27: 0+5 DarkGray/- | 5+90 Cyan/- | 95+5 DarkGray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 10+5 Black/Gray
