src/integration/snapshots/rustclean__integration__screens__tools-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Geliştirici araçları temizliği  │  geri kazanılabilir: 6.8 GiB (ölçülüyor…)
────────────────────────────────────────────────────────────────────────────────────────────────────
  Araç                               Kazanılır    Ayrıntı
▶ Docker                                  6.0 GiB 3 images, 2 volumes
  npm önbelleği                         800.0 MiB ~/.npm
  Cargo indirme önbelleği            ⠋            ölçülüyor…
  pip önbelleği                      —            not installed
  Gradle önbelleği                   —            daemon not running











────────────────────────────────────────────────────────────────────────────────────────────────────
┌ İşlemler ────────────────────────────────────────────────────────────────────────────────────────┐
│ yeniden indirilir  docker system prune                                                           │
│    $ docker system prune                                                                         │
│Docker Desktop, temizlikle boşalan alanı diske kendisi geri verir (TRIM, birkaç dakika sürebilir).│
│Belgelerdeki elle geri kazanma komutu eski, yalnızca amd64 bir imajdan ayrıcalıklı container      │
│çalıştırdığı için sunulmuyor. Ayrıntı:                                                            │
│docs.docker.com/desktop/troubleshoot-and-support/faqs/macfaqs                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Ölçüm yalnızca okur. Hiçbir komut siz onaylamadan çalışmaz.
 ?  yardım   ↑↓  seç   Enter  temizle   r  yeniden ölç   m  menü   Esc  geri   q  çık
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+13 White/- BOLD | 37+12 -/- BOLD
 5: 2+23 White/- BOLD | 37+12 Cyan/- | 50+10 Cyan/-
 6: 2+13 Gray/- | 37+12 Gray/- | 50+13 Gray/-
 7: 2+16 White/- BOLD | 37+12 Yellow/- | 50+18 Yellow/-
20: 0+1 DarkGray/- | 1+10 White/- BOLD | 11+89 DarkGray/-
21: 0+1 DarkGray/- | 1+19 Black/Yellow | 20+20 White/- BOLD | 99+1 DarkGray/-
22: 0+1 DarkGray/- | 1+25 Gray/- | 99+1 DarkGray/-
23: 0+1 DarkGray/- | 1+98 Gray/- | 99+1 DarkGray/-
24: 0+1 DarkGray/- | 1+92 Gray/- | 99+1 DarkGray/-
25: 0+1 DarkGray/- | 1+38 Gray/- | 99+1 DarkGray/-
26: 0+1 DarkGray/- | 1+61 Gray/- | 99+1 DarkGray/-
27: 0+100 DarkGray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 39+3 Black/Gray | 56+3 Black/Gray | 66+5 Black/Gray | 78+3 Black/Gray
