src/integration/snapshots/rustclean__integration__screens__tools-windows-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Geliştirici araçları temizliği  │  geri kazanılabilir: 10.0 GiB
────────────────────────────────────────────────────────────────────────────────────────────────────
  Araç                               Kazanılır    Ayrıntı
  Geçici dosyalar (%TEMP%)                3.0 GiB C:\Users\demo\AppData\Local\Temp
  Windows geçici klasörü             —            needs administrator rights to measure
▶ Windows Update indirmeleri              2.0 GiB C:\Windows\SoftwareDistribution\Download
  Geri Dönüşüm Kutusu                     5.0 GiB C: 5.0 GiB













────────────────────────────────────────────────────────────────────────────────────────────────────
┌ İşlemler ────────────────────────────────────────────────────────────────────────────────────────┐
│ yeniden indirilir  İndirilmiş güncellemeleri sil (yönetici PowerShell'inde)                      │
│    rustClean bunu çalıştırmaz; komutu kendiniz çalıştırın:                                       │
│    $ Stop-Service -Name wuauserv, bits -Force                                                    │
│    $ Remove-Item C:\Windows\SoftwareDistribution\Download\* -Recurse -Force                      │
│    $ Start-Service -Name wuauserv, bits                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Ölçüm yalnızca okur. Hiçbir komut siz onaylamadan çalışmaz.
 ?  yardım   ↑↓  seç   Enter  temizle   r  yeniden ölç   m  menü   Esc  geri   q  çık
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 2: 0+100 -/- BOLD | UNDERLINED
 3: 2+24 White/- BOLD | 37+12 -/- BOLD
 4: 2+22 White/- BOLD | 37+12 Yellow/- | 50+37 Yellow/-
 5: 0+100 White/Indexed(238) BOLD
 6: 2+19 White/- BOLD | 37+12 -/- BOLD
21: 0+1 DarkGray/- | 1+10 White/- BOLD | 11+89 DarkGray/-
22: 0+1 DarkGray/- | 1+19 Black/Yellow | 20+57 White/- BOLD | 99+1 DarkGray/-
23: 0+1 DarkGray/- | 1+59 Yellow/- | 99+1 DarkGray/-
24: 0+1 DarkGray/- | 1+46 White/- | 99+1 DarkGray/-
25: 0+1 DarkGray/- | 1+76 White/- | 99+1 DarkGray/-
26: 0+1 DarkGray/- | 1+40 White/- | 99+1 DarkGray/-
27: 0+100 DarkGray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 39+3 Black/Gray | 56+3 Black/Gray | 66+5 Black/Gray | 78+3 Black/Gray
